# src/swagger.yaml
@@ -5,7 +5,7 @@ info:
   description: The micro-service intended to provide the user role and access management
   contact:
     email: prasanna@makonlinesolutions.com
-host: 185.213.175.212:5004
+host: localhost:5004
 basePath: /
 securityDefinitions:
   jwt:
@@ -182,6 +182,93 @@ paths:
               message:
                 type: string
                 description: "Short message about the error or missing information in request"
+
+  /user/register:
+    x-swagger-router-controller: user.controller
+    post:
+      tags:
+        - "user"
+      summary: Create a new user account
+      description: Create a new user account
+      operationId: register
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: User body object
+          description: User creation body object
+          schema:
+            type: object
+            required:
+              - mobile
+            properties:
+              mobile:
+                type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            properties:
+              _id:
+                type: string
+                description: "Mongo Object Id ( user id )"
+              firstName:
+                description: "Registered users first name"
+                type: string
+              lastName:
+                description: "Registered user last name"
+                type: string
+              email:
+                type: string
+                description: "Registered users email address"
+              password:
+                type: string
+                description: "Hash of password provided during the registration"
+        "400":
+          description: Bad Request entry, in case validation failed or missing of required parameters
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: "statusCode for response to the request"
+              title:
+                type: string
+                description: "HTTP status code title for the response"
+              message:
+                type: string
+                description: "Short message about the error or missing information in request"
+              info:
+                type: object
+                description: "Error object"
+        "500":
+          description: Internal server error
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: "statusCode for response to the request"
+              title:
+                type: string
+                description: "HTTP status code title for the response"
+              message:
+                type: string
+                description: "Short message about the error or missing information in request"
+        default:
+          description: Error
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: "statusCode for response to the request"
+              title:
+                type: string
+                description: "HTTP status code title for the response"
+              message:
+                type: string
+                description: "Short message about the error or missing information in request"
+
   /user/authenticate:
     x-swagger-router-controller: user.controller
     post:
@@ -284,6 +371,164 @@ paths:
               message:
                 type: string
                 description: Short message about the error or missing information in request
+
+  /user/sendOTP:
+    x-swagger-router-controller: user.controller
+    post:
+      summary: Authenticate Registered user
+      tags:
+        - "user"
+      description: Verify the given mobile number, if the mobile number is not exists create an entry
+      operationId: sendOTP
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: login body object
+          description: username password to perform authentication
+          schema:
+            type: object
+            required:
+              - mobile
+            properties:
+              mobile:
+                type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            properties:
+              mobile:
+                type: string
+                description: "Mobile number"
+              otp:
+                description: "OTP to verify the mobile number provided"
+                type: string
+        "400":
+          description: Bad Request entry, in case validation failed or missing of required parameters
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: "statusCode for response to the request"
+              title:
+                type: string
+                description: "HTTP status code title for the response"
+              message:
+                type: string
+                description: "Short message about the error or missing information in request"
+              info:
+                type: object
+                description: "Error object"
+        "500":
+          description: Internal server error
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: "statusCode for response to the request"
+              title:
+                type: string
+                description: "HTTP status code title for the response"
+              message:
+                type: string
+                description: "Short message about the error or missing information in request"
+        default:
+          description: Error
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: statusCode for response to the request
+              title:
+                type: string
+                description: HTTP status code title for the response
+              message:
+                type: string
+                description: Short message about the error or missing information in request
+
+  /user/verifyOTP:
+    x-swagger-router-controller: user.controller
+    post:
+      summary: Authenticate Registered user
+      tags:
+        - "user"
+      description: Verify otp generated againsts the mobile number
+      operationId: verifyOtp
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: OTP body
+          description: otp verification
+          schema:
+            type: object
+            required:
+              - mobile
+              - otp
+            properties:
+              mobile:
+                type: string
+              otp:
+                type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            properties:
+              mobile:
+                type: string
+                description: "Mobile number"
+              otp:
+                description: "OTP to verify the mobile number provided"
+                type: string
+        "400":
+          description: Bad Request entry, in case validation failed or missing of required parameters
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: "statusCode for response to the request"
+              title:
+                type: string
+                description: "HTTP status code title for the response"
+              message:
+                type: string
+                description: "Short message about the error or missing information in request"
+              info:
+                type: object
+                description: "Error object"
+        "500":
+          description: Internal server error
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: "statusCode for response to the request"
+              title:
+                type: string
+                description: "HTTP status code title for the response"
+              message:
+                type: string
+                description: "Short message about the error or missing information in request"
+        default:
+          description: Error
+          schema:
+            properties:
+              statusCode:
+                type: integer
+                description: statusCode for response to the request
+              title:
+                type: string
+                description: HTTP status code title for the response
+              message:
+                type: string
+                description: Short message about the error or missing information in request
+
   /user/id2object:
     x-swagger-router-controller: user.controller
     post:
